# microtrace-mcp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
Frontend/assets/: asm.txt  firmware_analysis.json
Frontend/css/: asmViewer.css  dashboard.css  functionGraph.css  layout.css  main.css  mcp.css  mcpanimation.css  panels.css  settings.css  sidebar.css  tooltip.css  upload.css
Frontend/html/: about.html  dashboard.html  functionGraph.html  mcp.html  settings.html  upload.html
MCP_REVERSE_ENGINEERING-main/: .gitignore  README.md  app.py  clientServerMcp.py  extractRawRegisters.py  pageSize.py  pdfInfo.py  pdfReturnCuted.py  pdfReturnImages.py  pyproject.toml  registers.json  requirements.txt  searchRegister.py  server_mcp.py
src/: dashboard.ts  functionGraph.ts  index.ts  mcp.js  mcp.ts  mcpconnector.js  mcpconnector.ts  panelManager.ts  settings.ts  sync.ts  tabBar.ts  types.ts  upload.ts
src/infrastructure/: SyncManager.ts
src/modules/: asmViewer.ts  codeViewer.ts  dataLoader.ts  functionListViewer.ts  graphRenderer.ts  miniMap.ts
src/ui/: DrawerManager.ts  HistoryManager.ts  LayoutManager.ts  index.ts  tooltip.ts
