[project]
name = "mcp-register-extraction"
version = "0.1.0"
description = "STM32 Register Extraction and MCP Server"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "mcp>=0.1.0",
    "pytesseract>=0.3.13",
    "anthropic>=0.75.0",
    "python-dotenv>=1.2.1",
    "logger>=1.4",
    "openai>=2.8.1",
    "fastapi>=0.123.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

